Feat: 레이블이 부여된 공지사항 파일 생성

--- a/데이터전처리/TfidVectorizer.ipynb
+++ b/데이터전처리/TfidVectorizer.ipynb
@@ -11739,6 +11739,21 @@
         "for notice, label in notice_labels.items():\n",
         "    print(f\"{notice}: {label}\")"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "레이블이 부여된 공지사항 데이터를 가지고 csv파일 생성"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
