Feat: 한글 인코딩 적용

--- a/데이터전처리/TfidVectorizer.ipynb
+++ b/데이터전처리/TfidVectorizer.ipynb
@@ -11753,7 +11753,11 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# \"레이블부여된공지사항.csv\" 파일 생성\n",
+        "output_filename = \"레이블부여된공지사항.csv\"\n",
+        "df.to_csv(output_filename, index=False, encoding='utf-8-sig')"
+      ]
     }
   ],
   "metadata": {
