LSTM, CNN 예측 코드 추가

--- a/모델링/title 분류/CNN_수정파일.ipynb
+++ b/모델링/title 분류/CNN_수정파일.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,34 +172,32 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "248/248 [==============================] - 3s 10ms/step - loss: 5.7600 - accuracy: 0.0746 - val_loss: 5.1174 - val_accuracy: 0.1287\n",
+      "248/248 [==============================] - 3s 10ms/step - loss: 5.7950 - accuracy: 0.0709 - val_loss: 5.2145 - val_accuracy: 0.1024\n",
       "Epoch 2/10\n",
-      "248/248 [==============================] - 2s 9ms/step - loss: 3.7777 - accuracy: 0.3044 - val_loss: 2.7213 - val_accuracy: 0.4834\n",
+      "248/248 [==============================] - 2s 8ms/step - loss: 3.8928 - accuracy: 0.2959 - val_loss: 2.8605 - val_accuracy: 0.4834\n",
       "Epoch 3/10\n",
-      "248/248 [==============================] - 2s 9ms/step - loss: 1.5949 - accuracy: 0.6779 - val_loss: 1.5872 - val_accuracy: 0.6993\n",
+      "248/248 [==============================] - 2s 8ms/step - loss: 1.6354 - accuracy: 0.6766 - val_loss: 1.5647 - val_accuracy: 0.7119\n",
       "Epoch 4/10\n",
-      "248/248 [==============================] - 2s 9ms/step - loss: 0.6704 - accuracy: 0.8681 - val_loss: 1.2419 - val_accuracy: 0.7543\n",
+      "248/248 [==============================] - 2s 8ms/step - loss: 0.6417 - accuracy: 0.8736 - val_loss: 1.1757 - val_accuracy: 0.7780\n",
       "Epoch 5/10\n",
-      "248/248 [==============================] - 2s 9ms/step - loss: 0.3055 - accuracy: 0.9417 - val_loss: 1.1114 - val_accuracy: 0.7972\n",
+      "248/248 [==============================] - 2s 8ms/step - loss: 0.2692 - accuracy: 0.9532 - val_loss: 1.0811 - val_accuracy: 0.8052\n",
       "Epoch 6/10\n",
-      "248/248 [==============================] - 2s 9ms/step - loss: 0.1378 - accuracy: 0.9777 - val_loss: 1.0955 - val_accuracy: 0.8002\n",
+      "248/248 [==============================] - 2s 8ms/step - loss: 0.1169 - accuracy: 0.9823 - val_loss: 1.0133 - val_accuracy: 0.8209\n",
       "Epoch 7/10\n",
-      "248/248 [==============================] - 2s 8ms/step - loss: 0.0694 - accuracy: 0.9909 - val_loss: 1.0670 - val_accuracy: 0.8148\n",
+      "248/248 [==============================] - 2s 8ms/step - loss: 0.0533 - accuracy: 0.9947 - val_loss: 1.0146 - val_accuracy: 0.8249\n",
       "Epoch 8/10\n",
-      "248/248 [==============================] - 2s 8ms/step - loss: 0.0390 - accuracy: 0.9951 - val_loss: 1.0870 - val_accuracy: 0.8143\n",
+      "248/248 [==============================] - 2s 8ms/step - loss: 0.0308 - accuracy: 0.9971 - val_loss: 1.0212 - val_accuracy: 0.8269\n",
       "Epoch 9/10\n",
-      "248/248 [==============================] - 2s 8ms/step - loss: 0.0215 - accuracy: 0.9980 - val_loss: 1.1040 - val_accuracy: 0.8158\n",
-      "Epoch 10/10\n",
-      "248/248 [==============================] - 2s 8ms/step - loss: 0.0168 - accuracy: 0.9981 - val_loss: 1.1390 - val_accuracy: 0.8194\n"
+      "248/248 [==============================] - 2s 8ms/step - loss: 0.0171 - accuracy: 0.9991 - val_loss: 1.0439 - val_accuracy: 0.8315\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2acc98082e0>"
+       "<keras.callbacks.History at 0x1da45e02ef0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8193743693239153\n"
+      "Accuracy: 0.8314833501513622\n"
      ]
     }
    ],
@@ -228,6 +226,42 @@
     "accuracy = np.sum(y_pred.flatten() == y_test) / len(y_test)\n",
     "print(\"Accuracy:\", accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 15ms/step\n",
+      "입력 문장: [전공] 2023학년도 1학기 전공신청 및 변경안내\n",
+      "예측된 레이블: 282\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 새로운 입력 데이터 예측\n",
+    "new_text = input(\"새로운 문장을 입력하세요: \")\n",
+    "preprocessed_new_text = preprocess_text(new_text)\n",
+    "sequence = tokenizer.texts_to_sequences([preprocessed_new_text])\n",
+    "padded_sequence = pad_sequences(sequence, maxlen=max_sequence_length, padding='post')\n",
+    "prediction = model.predict(padded_sequence)\n",
+    "predicted_label = label_encoder.inverse_transform([prediction.argmax()])[0]\n",
+    "\n",
+    "# 예측 결과 출력\n",
+    "print(f\"입력 문장: {new_text}\")\n",
+    "print(f\"예측된 레이블: {predicted_label}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
