--- a/모델링/title 분류/LSTM_수정파일.ipynb
+++ b/모델링/title 분류/LSTM_수정파일.ipynb
@@ -259,6 +259,42 @@
     "accuracy = np.sum(y_pred.flatten() == y_test) / len(y_test)\n",
     "print(\"Accuracy:\", accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 15ms/step\n",
+      "입력 문장: [전공] 2023학년도 1학기 전공신청 및 변경안내\n",
+      "예측된 레이블: 282\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 새로운 입력 데이터 예측\n",
+    "new_text = input(\"새로운 문장을 입력하세요: \")\n",
+    "preprocessed_new_text = preprocess_text(new_text)\n",
+    "sequence = tokenizer.texts_to_sequences([preprocessed_new_text])\n",
+    "padded_sequence = pad_sequences(sequence, maxlen=max_sequence_length, padding='post')\n",
+    "prediction = model.predict(padded_sequence)\n",
+    "predicted_label = label_encoder.inverse_transform([prediction.argmax()])[0]\n",
+    "\n",
+    "# 예측 결과 출력\n",
+    "print(f\"입력 문장: {new_text}\")\n",
+    "print(f\"예측된 레이블: {predicted_label}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
